--- a/index.html
+++ b/index.html
@@ -1,11 +1,409 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Võ Studio — Trang web đơn giản mà đẹp</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg: #0f1221;
+      --card: #141833;
+      --text: #e9ecf5;
+      --muted: #a8b0c8;
+      --primary: #6d8bff;
+      --primary-2: #87f5ff;
+      --accent: #f9a8d4;
+      --ring: rgba(135, 245, 255, 0.35);
+      --shadow: 0 10px 30px rgba(0,0,0,0.35);
+      --radius: 14px;
+    }
+
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      font-family: "Inter", system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background:
+        radial-gradient(1200px 500px at 20% -10%, rgba(109,139,255,0.20), transparent 60%),
+        radial-gradient(900px 400px at 90% 10%, rgba(249,168,212,0.16), transparent 60%),
+        linear-gradient(180deg, #0b0e1a 0%, var(--bg) 100%);
+      color: var(--text);
+    }
+
+    /* Layout */
+    .container {
+      width: 100%;
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      backdrop-filter: saturate(120%) blur(8px);
+      background: linear-gradient(180deg, rgba(15,18,33,0.85), rgba(15,18,33,0.65));
+      border-bottom: 1px solid rgba(255,255,255,0.06);
+      z-index: 50;
+    }
+
+    .nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+      padding: 16px 0;
+    }
+
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      font-weight: 700;
+      letter-spacing: 0.4px;
+    }
+    .brand .logo {
+      width: 36px; height: 36px;
+      border-radius: 10px;
+      background:
+        conic-gradient(from 220deg at 50% 50%, var(--primary), var(--primary-2), var(--accent), var(--primary));
+      box-shadow: 0 0 0 6px rgba(255,255,255,0.04), 0 10px 15px rgba(109,139,255,0.25);
+    }
+
+    .links {
+      display: flex;
+      align-items: center;
+      gap: 18px;
+      flex-wrap: wrap;
+    }
+
+    .links a {
+      color: var(--muted);
+      text-decoration: none;
+      font-weight: 600;
+      padding: 8px 12px;
+      border-radius: 10px;
+      transition: 180ms ease;
+    }
+    .links a:hover {
+      color: var(--text);
+      background: rgba(255,255,255,0.06);
+    }
+
+    .cta {
+      display: inline-flex; align-items: center; gap: 10px;
+      background: linear-gradient(90deg, var(--primary), var(--primary-2));
+      color: #0a0d1a;
+      font-weight: 700;
+      padding: 10px 16px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(109,139,255,0.35);
+      text-decoration: none;
+      transition: transform 160ms ease, box-shadow 160ms ease;
+    }
+    .cta:hover { transform: translateY(-1px); box-shadow: 0 12px 28px rgba(109,139,255,0.45); }
+
+    /* Hero */
+    .hero {
+      padding: 70px 0 40px;
+      text-align: center;
+    }
+    .pill {
+      display: inline-flex; align-items: center; gap: 10px;
+      margin-bottom: 16px;
+      padding: 8px 12px;
+      border-radius: 999px;
+      background: rgba(135, 245, 255, 0.12);
+      border: 1px solid rgba(135, 245, 255, 0.25);
+      color: var(--primary-2);
+      font-weight: 600;
+    }
+    .title {
+      font-size: clamp(28px, 6vw, 52px);
+      line-height: 1.08;
+      margin: 8px 0 14px;
+      letter-spacing: -0.5px;
+      text-shadow: 0 2px 0 rgba(255,255,255,0.04);
+    }
+    .subtitle {
+      color: var(--muted);
+      font-size: clamp(15px, 2.6vw, 18px);
+      max-width: 800px;
+      margin: 0 auto 26px;
+    }
+    .hero-actions {
+      display: flex; gap: 12px; justify-content: center; flex-wrap: wrap;
+      margin-top: 10px;
+    }
+    .ghost {
+      display: inline-flex; align-items: center; gap: 10px;
+      color: var(--text);
+      font-weight: 700;
+      padding: 10px 16px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.18);
+      text-decoration: none;
+      transition: background 160ms ease, border-color 160ms ease;
+    }
+    .ghost:hover { background: rgba(255,255,255,0.06); border-color: rgba(255,255,255,0.28); }
+
+    /* Feature cards */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 20px;
+      margin-top: 40px;
+    }
+    .card {
+      grid-column: span 12;
+      background: linear-gradient(180deg, rgba(20,24,51,0.9), rgba(20,24,51,0.75));
+      border: 1px solid rgba(255,255,255,0.06);
+      border-radius: var(--radius);
+      padding: 20px;
+      box-shadow: var(--shadow);
+      position: relative;
+      overflow: hidden;
+    }
+    @media (min-width: 700px) {
+      .card { grid-column: span 6; }
+    }
+    @media (min-width: 980px) {
+      .card { grid-column: span 4; }
+    }
+    .card::after {
+      content: "";
+      position: absolute;
+      inset: -2px;
+      border-radius: inherit;
+      background:
+        radial-gradient(800px 120px at 10% -20%, var(--ring), transparent 40%),
+        radial-gradient(600px 100px at 90% -20%, rgba(249,168,212,0.28), transparent 40%);
+      z-index: 0;
+      pointer-events: none;
+    }
+    .card h3 {
+      margin: 0 0 8px;
+      font-size: 18px;
+      position: relative;
+      z-index: 1;
+    }
+    .card p {
+      margin: 0;
+      color: var(--muted);
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Showcase */
+    .showcase {
+      margin-top: 60px;
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 20px;
+    }
+    .shot {
+      grid-column: span 12;
+      border-radius: var(--radius);
+      background: linear-gradient(180deg, rgba(20,24,51,0.9), rgba(20,24,51,0.75));
+      border: 1px solid rgba(255,255,255,0.06);
+      padding: 14px;
+      box-shadow: var(--shadow);
+      overflow: hidden;
+    }
+    @media (min-width: 800px) {
+      .shot { grid-column: span 6; }
+    }
+    .mock {
+      height: 180px;
+      border-radius: 10px;
+      background:
+        linear-gradient(135deg, rgba(109,139,255,0.25), rgba(135,245,255,0.2)),
+        repeating-linear-gradient(45deg, rgba(255,255,255,0.08) 0 10px, rgba(255,255,255,0.03) 10px 20px);
+      border: 1px dashed rgba(255,255,255,0.15);
+    }
+    .shot h4 { margin: 10px 6px 4px; }
+    .shot p { margin: 0 6px 8px; color: var(--muted); }
+
+    /* Contact */
+    .contact {
+      margin: 70px 0 40px;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+    @media (min-width: 820px) {
+      .contact { grid-template-columns: 1.2fr 1fr; }
+    }
+    .panel {
+      background: linear-gradient(180deg, rgba(20,24,51,0.9), rgba(20,24,51,0.75));
+      border: 1px solid rgba(255,255,255,0.06);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 20px;
+    }
+    .panel h3 { margin: 0 0 10px; }
+    .panel p { color: var(--muted); margin: 0 0 14px; }
+
+    form { display: grid; gap: 12px; }
+    label { font-weight: 600; font-size: 14px; color: var(--text); }
+    input, textarea {
+      width: 100%;
+      padding: 12px 14px;
+      border-radius: 12px;
+      border: 1px solid rgba(255,255,255,0.14);
+      background: #0b0e1a;
+      color: var(--text);
+      outline: none;
+      transition: border-color 160ms ease, box-shadow 160ms ease;
+    }
+    input:focus, textarea:focus {
+      border-color: var(--primary-2);
+      box-shadow: 0 0 0 4px rgba(135, 245, 255, 0.18);
+    }
+    textarea { min-height: 120px; resize: vertical; }
+
+    .btn {
+      display: inline-flex; align-items: center; justify-content: center; gap: 10px;
+      background: linear-gradient(90deg, var(--primary), var(--primary-2));
+      color: #0a0d1a;
+      font-weight: 700;
+      padding: 12px 16px;
+      border-radius: 12px;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 8px 20px rgba(109,139,255,0.35);
+      transition: transform 160ms ease, box-shadow 160ms ease;
+    }
+    .btn:hover { transform: translateY(-1px); box-shadow: 0 12px 28px rgba(109,139,255,0.45); }
+
+    footer {
+      margin: 20px 0 40px;
+      color: var(--muted);
+      text-align: center;
+      font-size: 14px;
+    }
+
+    /* Utilities */
+    .spacer-20 { height: 20px; }
+    .spacer-40 { height: 40px; }
+  </style>
 </head>
 <body>
-    siuuu
+  <header>
+    <div class="container nav">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>Võ Studio</div>
+      </div>
+      <nav class="links" aria-label="Main">
+        <a href="#home">Trang chủ</a>
+        <a href="#features">Tính năng</a>
+        <a href="#work">Sản phẩm</a>
+        <a href="#contact" class="ghost">Liên hệ</a>
+        <a class="cta" href="#get-started">Bắt đầu</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <section id="home" class="hero">
+      <div class="pill">Thiết kế tối giản • Hiệu ứng hiện đại</div>
+      <h1 class="title">Xây dựng trang web đẹp, nhanh và tinh gọn</h1>
+      <p class="subtitle">
+        Một layout gọn gàng, hiệu ứng mượt mà và màu sắc nhã — đủ để bạn nổi bật mà không phức tạp.
+        Sửa nội dung theo cách bạn muốn, phần nền và đổ bóng đã được tinh chỉnh để nổi bật trên mọi thiết bị.
+      </p>
+      <div class="hero-actions">
+        <a class="cta" href="#features">Khám phá tính năng</a>
+        <a class="ghost" href="#work">Xem sản phẩm</a>
+      </div>
+    </section>
+
+    <section id="features" class="grid">
+      <div class="card">
+        <h3>Nhanh & phản hồi tốt</h3>
+        <p>Tối ưu CSS với grid và clamp để hiển thị đẹp từ mobile đến desktop.</p>
+      </div>
+      <div class="card">
+        <h3>Màu sắc tinh tế</h3>
+        <p>Phối màu lạnh kết hợp điểm nhấn pastel, tạo cảm giác công nghệ nhưng vẫn dịu mắt.</p>
+      </div>
+      <div class="card">
+        <h3>Bố cục rõ ràng</h3>
+        <p>Tiêu đề, mô tả, nút gọi hành động đều có nhịp điệu trực quan để người xem không bị lạc.</p>
+      </div>
+      <div class="card">
+        <h3>Dễ chỉnh sửa</h3>
+        <p>Chỉ một file HTML, bạn có thể thay nội dung nhanh chóng mà không phụ thuộc framework.</p>
+      </div>
+      <div class="card">
+        <h3>Hiệu ứng tinh tế</h3>
+        <p>Đổ bóng mềm, viền mờ và gradient nhẹ nhàng tạo chiều sâu mà không gây rối mắt.</p>
+      </div>
+      <div class="card">
+        <h3>Chuẩn SEO cơ bản</h3>
+        <p>Heading rõ ràng, nội dung súc tích, dễ mở rộng thêm meta khi cần.</p>
+      </div>
+    </section>
+
+    <section id="work" class="showcase">
+      <div class="shot">
+        <div class="mock"></div>
+        <h4>Landing page sự kiện</h4>
+        <p>Thiết kế nhẹ, tối ưu chuyển đổi với tiêu đề mạnh mẽ và CTA rõ ràng.</p>
+      </div>
+      <div class="shot">
+        <div class="mock"></div>
+        <h4>Portfolio cá nhân</h4>
+        <p>Trình bày dự án với layout gọn, nhấn vào điểm khác biệt của bạn.</p>
+      </div>
+      <div class="shot">
+        <div class="mock"></div>
+        <h4>Trang sản phẩm</h4>
+        <p>Hình ảnh lớn, mô tả ngắn, nút mua nổi bật — tập trung vào trải nghiệm.</p>
+      </div>
+      <div class="shot">
+        <div class="mock"></div>
+        <h4>Blog tối giản</h4>
+        <p>Chữ dễ đọc, khoảng cách hợp lý để nội dung luôn thoáng và nạp nhanh.</p>
+      </div>
+    </section>
+
+    <section id="contact" class="contact">
+      <div class="panel">
+        <h3>Kết nối cùng Võ Studio</h3>
+        <p>Nói cho mình biết bạn đang muốn làm gì — mình sẽ giúp bạn tinh gọn ý tưởng và triển khai nhanh.</p>
+        <form>
+          <div>
+            <label for="name">Họ tên</label>
+            <input id="name" name="name" type="text" placeholder="Ví dụ: Võ Minh" />
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input id="email" name="email" type="email" placeholder="name@domain.com" />
+          </div>
+          <div>
+            <label for="message">Lời nhắn</label>
+            <textarea id="message" name="message" placeholder="Mô tả ngắn về dự án hoặc mong muốn của bạn"></textarea>
+          </div>
+          <button class="btn" type="button">Gửi lời nhắn</button>
+        </form>
+      </div>
+      <div class="panel">
+        <h3>Thông tin</h3>
+        <p><strong>Địa điểm:</strong> Binh Hung Commune, Tp. HCM</p>
+        <p><strong>Email:</strong> hello@vostudio.dev</p>
+        <p><strong>Giờ làm việc:</strong> Thứ 2 – Thứ 6, 9:00–18:00</p>
+        <div class="spacer-20"></div>
+        <a class="ghost" href="#get-started">Nhận tư vấn nhanh</a>
+      </div>
+    </section>
+
+    <footer>
+      © 2025 Võ Studio — Xây dựng trải nghiệm web tinh gọn và hiệu quả.
+    </footer>
+  </main>
 </body>
 </html>
